[package]
name = "godot-logger"
version = "1.0.0"
edition = "2018"

description = "A logger for godot-rust projects that prints logs using the godot_print! macro"
repository = "https://github.com/jdno/godot-logger"
license = "MIT OR Apache-2.0"
keywords = [
    "gamedev",
    "godot",
    "log"
]
categories = [
    "development-tools::debugging"
]

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
chrono = "0.4.19"
gdnative-core = "0.9.3"
log = "0.4.14"
log4rs = "1.0.0"

[dev-dependencies]
gdnative = "0.9.3"
