[package]
name = "godot-logger"
version = "1.1.0"
edition = "2018"

description = "A logger for godot-rust projects that prints logs using the godot_print! macro"
repository = "https://github.com/jdno/godot-logger"
license = "MIT OR Apache-2.0"
keywords = [
    "gamedev",
    "godot",
    "log"
]
categories = [
    "development-tools::debugging"
]

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = ">= 0.4"
log = ">= 0.4"
log4rs = "1"

[dependencies.gdnative-core]
version = ">= 0.9"
optional = true

[dev-dependencies]
gdnative = ">= 0.9"

[features]
default = ["godot3"]
godot3 = ["gdnative-core"]
